bk_ida/gccida/g2/unroll_loop
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unroll_loop/src/unroll.c:705:4: error: expected ';' after expression
rtx v12; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unroll_loop/src/unroll.c:705:5: error: use of undeclared identifier 'v12'
rtx v12; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unroll_loop/src/unroll.c:710:4: error: expected ';' after expression
rtx v17; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unroll_loop/src/unroll.c:710:5: error: use of undeclared identifier 'v17'
rtx v17; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unroll_loop/src/unroll.c:711:4: error: expected ';' after expression
rtx v18; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unroll_loop/src/unroll.c:711:5: error: use of undeclared identifier 'v18'
rtx v18; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unroll_loop/src/unroll.c:725:4: error: expected ';' after expression
rtx v32; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unroll_loop/src/unroll.c:725:5: error: use of undeclared identifier 'v32'
rtx v32; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unroll_loop/src/unroll.c:732:4: error: expected ';' after expression
rtx i; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unroll_loop/src/unroll.c:732:5: error: use of undeclared identifier 'i'
rtx i; // r13 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unroll_loop/src/unroll.c:733:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unroll_loop/src/unroll.c:733:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unroll_loop/src/unroll.c:737:4: error: expected ';' after expression
rtx v44; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unroll_loop/src/unroll.c:737:5: error: use of undeclared identifier 'v44'
rtx v44; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unroll_loop/src/unroll.c:739:4: error: expected ';' after expression
rtx v46; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unroll_loop/src/unroll.c:739:5: error: use of undeclared identifier 'v46'
rtx v46; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unroll_loop/src/unroll.c:742:6: error: use of undeclared identifier 'v49'
rtx *v49; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unroll_loop/src/unroll.c:759:6: error: use of undeclared identifier 'x_regno_reg_rtx'; did you mean 'gen_reg_rtx'?
rtx *x_regno_reg_rtx; // rax 
     ^~~~~~~~~~~~~~~
     gen_reg_rtx
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unroll_loop/src/rtl.h:1258:12: note: 'gen_reg_rtx' declared here
extern rtx gen_reg_rtx                  PARAMS ((enum machine_mode));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unroll_loop/src/unroll.c:759:5: error: invalid operands to binary expression ('rtx' (aka 'struct rtx_def *') and 'rtx (enum machine_mode)' (aka 'struct rtx_def *(enum machine_mode)'))
rtx *x_regno_reg_rtx; // rax 
~~~ ^~~~~~~~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/unroll_loop/src/obj/unroll.o] Error 1
